--- a/style.css
+++ b/style.css
@@ -15,11 +15,15 @@
 .sidebar {
   background-color: red;
   width: 340px;
+  border-radius: 1rem;
+  background-color: #121212;
 }
 
 .main-content {
   background-color: rgb(104, 55, 197);
   flex: 1;
+  border-radius: 1rem;
+  background-color: #121212;
 }
 
 .music-player {
@@ -28,4 +32,5 @@
   bottom: 0;
   width: 100%;
   height: 72px;
+  background-color: black;
 }
