--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+body {
+  background-color: #121212;
+}
 * {
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
-  background-color: black;
-  color: white;
   overflow: hidden;
 }
 
@@ -13,24 +14,56 @@
 }
 
 .sidebar {
-  background-color: red;
   width: 340px;
   border-radius: 1rem;
-  background-color: #121212;
+  background-color: rgb(213, 228, 111);
 }
 
 .main-content {
-  background-color: rgb(104, 55, 197);
   flex: 1;
   border-radius: 1rem;
   background-color: #121212;
+  overflow: auto;
 }
 
 .music-player {
-  background-color: yellow;
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 72px;
   background-color: black;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.nav {
+  background-color: black;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+  justify-content: center;
+  padding: 0.5rem 0.75rem;
+}
+
+.nav-option {
+  line-height: 2.5rem;
+  opacity: 0.7;
+  padding: 0.5rem 0.75rem;
+}
+
+.nav-option:hover {
+  opacity: 1;
+}
+
+.nav-option i {
+  font-size: 1.2rem;
+}
+
+.nav-option a {
+  font-size: 1rem;
+  margin-left: 1rem;
 }
