--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 .main {
   display: flex;
   height: 100vh;
+  padding: 0.5rem;
 }
 
 .sidebar {
@@ -66,4 +67,39 @@ a {
 .nav-option a {
   font-size: 1rem;
   margin-left: 1rem;
+}
+
+.library {
+  background-color: #121212;
+  border-radius: 1rem;
+  width: 100%;
+  height: 100%;
+  margin-top: 0.5rem;
+  padding: 0.5rem 0.75rem;
+}
+
+.options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.lib-option img {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.icons {
+  padding-right: 1.5rem;
+  font-size: 1.25rem;
+  display: flex;
+  gap: 1rem;
+}
+
+.icons i {
+  opacity: 0.7;
+}
+
+.icons i:hover {
+  opacity: 1;
 }
